--- a/pymtk.tex
+++ b/pymtk.tex
@@ -21,7 +21,7 @@ Prerequisites:
 
   1. \ulink {Python 2.4 or 2.5}{http://www.python.org/}
 
-  2. \ulink {MISR Toolkit}{http://www.openchannelfoundation.org/projects/MISR_Toolkit}
+  2. \ulink {MISR Toolkit}{https://github.com/nasa/MISR-Toolkit/releases}
 
   3. \ulink {NumPy}{http://numpy.scipy.org/} 
  
